--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,16 +64,14 @@ repos:
     rev: v2.6.0
     hooks:
       - id: reorder-python-imports
-  # ------------------------- sql ------------------------
-  # - repo: local
-  #   hooks:
-  #     - id: mypy
-  #       name: mypy
-  #       entry: "bash ./tests/run_mypy.sh"
-  #       language: system
-  #       types: [python]
-  #       pass_filenames: false
-  #       require_serial: true
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.6.1
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+      - id: poetry-export
+        args: ["--without-hashes", "-f", "requirements.txt", "-o", "requirements.txt"]
+
   # - repo: local
   #   hooks:
   #     - id: pytest
