--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ jsonschema==4.19.0 ; python_version >= "3.11" and python_version < "4.0"
 kiwisolver==1.4.5 ; python_version >= "3.11" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
-matplotlib==3.7.2 ; python_version >= "3.11" and python_version < "4.0"
+matplotlib==3.8.0 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.25.2 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -33,7 +33,7 @@ pydantic==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
 pydeck==0.8.0 ; python_version >= "3.11" and python_version < "4.0"
 pygments==2.16.1 ; python_version >= "3.11" and python_version < "4.0"
 pympler==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
-pyparsing==3.0.9 ; python_version >= "3.11" and python_version < "4.0"
+pyparsing==3.1.1 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytz-deprecation-shim==0.1.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2023.3.post1 ; python_version >= "3.11" and python_version < "4.0"
@@ -42,6 +42,8 @@ requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 rich==13.5.2 ; python_version >= "3.11" and python_version < "4.0"
 rpds-py==0.10.3 ; python_version >= "3.11" and python_version < "4.0"
 seaborn==0.12.2 ; python_version >= "3.11" and python_version < "4.0"
+setuptools-scm==7.1.0 ; python_version >= "3.11" and python_version < "4.0"
+setuptools==68.2.2 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 smmap==5.0.0 ; python_version >= "3.11" and python_version < "4.0"
 streamlit==1.26.0 ; python_version >= "3.11" and python_version < "4.0"
